--- a/src/globals.css
+++ b/src/globals.css
@@ -18,6 +18,11 @@
 
 html {
   font-size: 10px;
+  color: #372B2B;
+}
+
+button {
+  transition: ease .2s;
 }
 
 body {
@@ -28,8 +33,8 @@ body {
   line-height: 1;
   position: relative;
   overflow-x: hidden;
-  @media (max-width: 250px) {
+  @media (max-width: 350px) {
     position: static;
-    min-width: 250px;
+    min-width: 350px;
   }
 }
